--- a/WebApplication1/WebApplication1.csproj
+++ b/WebApplication1/WebApplication1.csproj
@@ -4,6 +4,14 @@
     <TargetFramework>netcoreapp3.0</TargetFramework>
   </PropertyGroup>
 
+
+  <ItemGroup>
+    <PackageReference Include="Autofac" Version="4.9.4" />
+    <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="5.0.1" />
+    <PackageReference Include="MassTransit" Version="6.0.1" />
+  </ItemGroup>
+
+
   <ItemGroup>
     <ProjectReference Include="..\DTemplate.Common\DTemplate.Common.csproj" />
   </ItemGroup>
