--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -7,6 +7,11 @@ jobs:
 
     runs-on: ubuntu-latest
 
+    services:
+      redis:
+        image: latest
+        ports: 
+        - "6379:6379"
     steps:
     - uses: actions/checkout@v1
     - name: Setup .NET Core
