--- a/DTemplate.Common/DTemplate.Common.csproj
+++ b/DTemplate.Common/DTemplate.Common.csproj
@@ -5,9 +5,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="EFRepository\DockerFile\**" />
+    <EmbeddedResource Remove="EFRepository\DockerFile\**" />
+    <None Remove="EFRepository\DockerFile\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Autofac" Version="4.9.4" />
     <PackageReference Include="Autofac.Extras.DynamicProxy" Version="4.5.0" />
     <PackageReference Include="Castle.Core" Version="4.4.0" />
+    <PackageReference Include="DevExpress.Xpo" Version="19.1.4" />
     <PackageReference Include="MassTransit" Version="6.0.1" />
     <PackageReference Include="MassTransit.Autofac" Version="6.0.1" />
     <PackageReference Include="MassTransit.RabbitMQ" Version="6.0.1" />
